--- a/YS250.html
+++ b/YS250.html
@@ -229,6 +229,13 @@
                   <strong>8</strong>
                 </a>
               </div>
+              <div class="animated fadeIn appear-animation-visible">
+                <h4 class="text-4 pt-2 pb-0 mb-1"><strong>* YS-250 專業版</strong></h4>
+                <p class="text-3-4 mt-0">
+                  提供有線麥克風 無線擴音雙通道 皆可單獨或混音使用<br>
+                  預計 2021 下半年上市推出
+                </p>
+              </div>
             </div>
             <div class="col-lg-6 mb-0 mb-lg-0 pt-5">
               <ol class="list list-ordened list-ordened-style-2 pl-0">
