--- a/about.html
+++ b/about.html
@@ -238,9 +238,8 @@
 								<h4 class="font-weight-bold text-transform-none line-height-2 text-5-6 mb-2">科技帶來的改變</h4>
 								<p class="line-height-7 text-4 mb-3">這些年，電子科技帶給來我們生活更加便利</p>
 								<p class="font-weight-semibold text-4 appear-animation" data-appear-animation="fadeInRightShorter" data-appear-animation-delay="600" style="display:flex;align-items: center;justify-content: center;">
-            			<span>這些產品設計最重要的基礎是在
-										<i class="fas fa-angle-left"></i>
-									</span>
+            			<span>這些改變的來源在</span>
+									<i class="fas fa-angle-left" style="font-size: 30px;margin-left: 10px;"></i>
 									<span style="padding-left: 10px">
 										<span>
 											<span style="color:royalblue;">信號的處理</span>
@@ -393,8 +392,8 @@
 								<ul class="list list-icons list-icons-lg">
 									<li>
 										<i class="fas fa-angle-right text-4"></i>
-										<span class="text-4">產品<span class="text-primary">重量全世界最輕</span>，手持麥克風70g、頸掛麥克風 40g 、音頻主機38g 、<span
-												class="text-primary">音箱 300g</span>
+										<span class="text-4">產品<span class="text-primary">重量全世界最輕</span>，手持麥克風75g、頸掛麥克風 40g 、音頻主機38g 、<span
+												class="text-primary">音箱 299g</span>
 												(以上皆含電池)。</span>
 									</li>
 									<li>
@@ -404,8 +403,8 @@
 									</li>
 									<li>
 										<i class="fas fa-angle-right text-4"></i>
-										<span class="text-4">無線平台可以讓使用者在麥克風(YS-100，YS-150) / 自有手機 ←→
-												音頻主機(YS-200) / 擴音音箱(YS-250)間自由搭配，也可以選用多種麥克風與一個音頻主機/擴音器搭配，不需重複購買相同功能的設備。養聲堂未來產品也可與前期產品搭配使用。</span>
+										<span class="text-4">無線平台可以讓使用者在麥克風 / 自有手機 ←→
+												音頻主機 / 擴音音箱間自由搭配，也可以種麥克風與音頻主機/擴音器搭配，不需重複購買相同功能的設備。養聲堂未來產品也可與前期產品搭配使用。</span>
 									</li>
 								</ul>
 							</div>
