--- a/index.html
+++ b/index.html
@@ -487,18 +487,19 @@
 			<div class="modal fade" id="newProduct" tabindex="-1" role="dialog" aria-labelledby="newProductLabel" aria-hidden="true">
 				<div class="modal-dialog modal-lg">
 					<div class="modal-content">
-						<div class="modal-header">
-							<h4 class="modal-title" id="newProductLabel">數位無線擴音音箱</h4>
-							<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+						<div style="padding: 10px 20px 0 20px">
+							<!-- <h4 class="modal-title" id="newProductLabel">數位無線擴音音箱</h4> -->
+							<button type="button" class="close" data-dismiss="modal" aria-hidden="true" style="padding:2px 6px">&times;</button>
 						</div>
 						<div class="modal-body">
 							<div class="row">
 								<div class="media-left media-top col-sm-12  col-md-5" style="padding-bottom:15px">
-									<img src="img/soundBox.jpg" class="media-object" style="width:100%">
+									<img src="img/soundBox.jpg" class="media-object" style="width:100%;border:1px solid #ddd">
+									<img src="img/logo.jpg" style="width:60px;position: absolute;top:0;left:15px;">
 								</div>
 								<div class="col-sm-12 col-md-7">
 									<div>
-										<h3 class="media-heading" style="font-size: 22px;font-weight: 600;margin-bottom: 0">
+										<h3 class="media-heading" style="color: #ff6600;font-size: 22px;font-weight: 600;margin-bottom: 0">
 											手機藍牙 無線麥克風擴音音箱來了!</h3>
 									</div>
 									<h3 style="color:#86ae3c;margin:15px 0 13px 0;font-size: 20px;font-weight: 500;">
