--- a/service.html
+++ b/service.html
@@ -251,6 +251,25 @@
 											充電 / 充電知識
 										</h2>
 										<section class="toggle active">
+											<a class="toggle-title text-4">充電注意事項</a>
+											<div class="toggle-content mt-3">
+												<ul class="list list-ordened">
+													<li class="text-4">充電時，指示燈顯示為紅燈，充飽電後顯示變為藍燈。</li>
+													<li class="text-4">本公司產品皆使用高聚合鋰電池，安全 壽命長；無記憶效應，可以隨時充電。</li>
+													<li class="text-4">雖使用手機電池保護芯片可做電池保護，插充電器切勿超過兩天；為避免電量過低造成電池損壞，若有長時間不使用、如寒、暑假休假前，確定先將電池充滿後再收妥存放。</li>
+												</ul>
+												<blockquote class="blockquote-secondary">
+													<p class="line-height-7 text-4 mb-0">注意：</p>
+													<ol class="list list-ordened">
+														<li class="text-4">不支持 Type-C 快充充電器；嚴禁使用電腦 筆電 教學機之 USB充電，其電力不足可能會損壞設備。</li>
+														<li class="text-4">充電器規格要求 : 輸出電壓 4.75V~5.25V ，容量 1.2A (安培) 或以上。建議使用舊手機充電器即可，若有充電器需求，可向公司洽詢。</li>
+														<li class="text-4">本公司特製 Y型USB充電線僅供本公司產品套件使用，絕對不可使用於手機或其他電子產品充電或數據交換使用，會造成危險或數據遺失。</li>
+														<li class="text-4">YS-250 邊充電邊擴音功能：若您音箱電量已低，您可以使用移動電源或充電器邊充電邊使用無線音箱功能。<br>* 切勿長期以此方式使用音箱，音箱長期插著USB	持續充電會有安全顧慮與嚴重影響電池壽命</li>
+													</ol>
+												</blockquote>
+											</div>
+										</section>
+										<section class="toggle">
 											<a class="toggle-title text-4">充電器選擇</a>
 											<div class="toggle-content">
 												<p class="line-height-7 text-4 mb-0">我們的產品非常省電、電池容量相較手機電池非常小(功率 1 W)。我們麥克風設定的充電電流在 0.2A，擴音器在 0.7A 左右，所有充電使用歐盟標準 MicroUSB 5V充電、搭配8年前淘汰智慧手機充電器都綽綽有餘。亦符合全球環保需求。</p>
