--- a/shop.html
+++ b/shop.html
@@ -201,7 +201,7 @@
 							<span class="font-weight-extra-bold text-tertiary">小天使水果店</span><br>
 							<span class="font-weight-extra-bold text-tertiary">330桃園市桃園區南華街133號</span><br>
 							營業時間 : 07:00~18:00 (周一 & 國定假日休息)<br>
-							電話：0932200672 林先生 (養聲堂聲學顧問)</p>
+							電話：0932200672 劉先生 (養聲堂聲學顧問)</p>
 
               
 
