--- a/shop.html
+++ b/shop.html
@@ -200,12 +200,8 @@
 							<p class="line-height-7 text-4 mb-3">
 							<span class="font-weight-extra-bold text-tertiary">小天使水果店</span><br>
 							<span class="font-weight-extra-bold text-tertiary">330桃園市桃園區南華街133號</span><br>
-							營業時間 : 07:00~18:00 (周一 & 國定假日休息)<br>
-							電話：0932200672 劉先生 (養聲堂聲學顧問)</p>
-
-              
-
-				      
+							營業時間 : 07:00~17:00 (每周一休息)<br>
+							電話：0932200672 林先生 (養聲堂聲學顧問)</p>				      
 				    </div>
 				  </div>
 				</div>
