--- a/service.html
+++ b/service.html
@@ -260,11 +260,19 @@
 												</ul>
 												<blockquote class="blockquote-secondary">
 													<p class="line-height-7 text-4 mb-0">注意：</p>
-													<ol class="list list-ordened">
-														<li class="text-4">不支持 Type-C 快充充電器；嚴禁使用電腦 筆電 教學機之 USB充電，其電力不足可能會損壞設備。</li>
-														<li class="text-4">充電器規格要求 : 輸出電壓 4.75V~5.25V ，容量 1.2A (安培) 或以上。建議使用舊手機充電器即可，若有充電器需求，可向公司洽詢。</li>
-														<li class="text-4">本公司特製 Y型USB充電線僅供本公司產品套件使用，絕對不可使用於手機或其他電子產品充電或數據交換使用，會造成危險或數據遺失。</li>
-														<li class="text-4">YS-250 邊充電邊擴音功能：若您音箱電量已低，您可以使用移動電源或充電器邊充電邊使用無線音箱功能。<br>* 切勿長期以此方式使用音箱，音箱長期插著USB	持續充電會有安全顧慮與嚴重影響電池壽命</li>
+													<ol class="list list-alert">
+														<li class="text-4">
+															<i class="fas fa-exclamation-triangle text-danger"></i>
+															不支持 Type-C 快充充電器；嚴禁使用電腦 筆電 教學機之 USB充電，其電力不足可能會損壞設備。</li>
+														<li class="text-4">
+															<i class="fas fa-exclamation-triangle text-danger"></i>
+															充電器規格要求 : 輸出電壓 4.75V~5.25V ，容量 1.2A (安培) 或以上。建議使用舊手機充電器即可，若有充電器需求，可向公司洽詢。</li>
+														<li class="text-4">
+															<i class="fas fa-exclamation-triangle text-danger"></i>
+															本公司特製 Y型USB充電線僅供本公司產品套件使用，絕對不可使用於手機或其他電子產品充電或數據交換使用，會造成危險或數據遺失。</li>
+														<li class="text-4">
+															<i class="fas fa-exclamation-triangle text-danger"></i>
+															YS-250 邊充電邊擴音功能：若您音箱電量已低，您可以使用移動電源或充電器邊充電邊使用無線音箱功能。<br>* 切勿長期以此方式使用音箱，音箱長期插著USB	持續充電會有安全顧慮與嚴重影響電池壽命</li>
 													</ol>
 												</blockquote>
 											</div>
