--- a/about.html
+++ b/about.html
@@ -551,11 +551,9 @@
 		<script async src="https://www.googletagmanager.com/gtag/js?id=AW-936755895"></script>
 		<script>
 			window.dataLayer = window.dataLayer || [];
-
-			function gtag() {
-				dataLayer.push(arguments);
-			}
+			function gtag(){dataLayer.push(arguments);}
 			gtag('js', new Date());
+
 			gtag('config', 'AW-936755895');
 		</script>
 
