--- a/YS150.html
+++ b/YS150.html
@@ -2,7 +2,6 @@
 <html>
 
 <head>
-
 	<!-- Basic -->
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -27,7 +26,6 @@
 	<link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" href="vendor/fontawesome-free/css/all.min.css">
 	<link rel="stylesheet" href="vendor/animate/animate.compat.css">
-	<!-- <link rel="stylesheet" href="vendor/simple-line-icons/css/simple-line-icons.min.css"> -->
 	<link rel="stylesheet" href="vendor/owl.carousel/assets/owl.carousel.min.css">
 	<link rel="stylesheet" href="vendor/owl.carousel/assets/owl.theme.default.min.css">
 	<link rel="stylesheet" href="vendor/magnific-popup/magnific-popup.min.css">
@@ -37,10 +35,6 @@
 	<link rel="stylesheet" href="css/yt-icon.css">
 	<link rel="stylesheet" href="css/theme.css">
 	<link rel="stylesheet" href="css/theme-elements.css">
-	<!-- <link rel="stylesheet" href="css/theme-blog.css"> -->
-	<!-- <link rel="stylesheet" href="css/theme-shop.css"> -->
-
-
 
 	<!-- Skin CSS -->
 	<link id="skinCSS" rel="stylesheet" href="css/skins/default.css">
@@ -51,6 +45,32 @@
 	<!-- Head Libs -->
 	<script src="vendor/modernizr/modernizr.min.js"></script>
 
+	<!-- Global site tag (gtag.js) - Google Ads: 936755895 -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=AW-936755895"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+
+		function gtag() {
+			dataLayer.push(arguments);
+		}
+		gtag('js', new Date());
+		gtag('config', 'AW-936755895');
+	</script>
+	<!-- Event snippet for 二代智慧無線麥克風擴音系列 conversion page In your html page, add the snippet and call gtag_report_conversion when someone clicks on the chosen link or button. -->
+	<script>
+		function gtag_report_conversion(url) {
+			var callback = function () {
+				if (typeof (url) != 'undefined') {
+					window.location = url;
+				}
+			};
+			gtag('event', 'conversion', {
+				'send_to': 'AW-936755895/Y9VjCIzg99IBELeF174D',
+				'event_callback': callback
+			});
+			return false;
+		}
+	</script>
 </head>
 
 <body>
@@ -65,7 +85,6 @@
 							<div class="header-row">
 								<div class="header-logo">
 									<a href="index.html">
-										<!-- <img alt="Porto" width="100" height="48" data-sticky-width="82" data-sticky-height="40" src="img/logo-default-slim.png"> -->
 										<span class="icon-logo_2"></span>
 										<span class="font-weight-extra-bold">養聲堂科技</span>
 									</a>
@@ -109,8 +128,16 @@
 																	<div class="col-lg-3">
 																		<span class="dropdown-mega-sub-title">二代無線擴音(接收端)</span>
 																		<ul class="dropdown-mega-sub-nav">
-																			<li><a class="dropdown-item" href="YS200.html">YS-200 智慧音頻主機</a></li>
-																			<li><a class="dropdown-item" href="YS250.html">YS-250 數位無線擴音音箱</a></li>
+																			<li>
+																				<a class="dropdown-item" href="YS200.html"
+																					onclick="return gtag_report_conversion('http://www.youngtone.com.tw/YS200.html');"
+																				>YS-200 智慧音頻主機</a>
+																			</li>
+																			<li>
+																				<a class="dropdown-item" href="YS250.html"
+																					onclick="return gtag_report_conversion('http://www.youngtone.com.tw/YS250.html');"
+																				>YS-250 數位無線擴音音箱</a>
+																			</li>
 																		</ul>
 																	</div>
 																	<div class="col-lg-3">
@@ -505,34 +532,6 @@
 	<!-- Theme Initialization Files -->
 	<script src="js/theme.init.js"></script>
 
-	<!-- Global site tag (gtag.js) - Google Ads: 936755895 -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=AW-936755895"></script>
-	<script>
-		window.dataLayer = window.dataLayer || [];
-
-		function gtag() {
-			dataLayer.push(arguments);
-		}
-		gtag('js', new Date());
-		gtag('config', 'AW-936755895');
-	</script>
-
-	<!-- Event snippet for 二代智慧無線麥克風擴音系列 conversion page In your html page, add the snippet and call gtag_report_conversion when someone clicks on the chosen link or button. -->
-	<script>
-		function gtag_report_conversion(url) {
-			var callback = function () {
-				if (typeof (url) != 'undefined') {
-					window.location = url;
-				}
-			};
-			gtag('event', 'conversion', {
-				'send_to': 'AW-936755895/Y9VjCIzg99IBELeF174D',
-				'event_callback': callback
-			});
-			return false;
-		}
-	</script>
-
 	<!-- FB -->
 	<script>
 		(function (d, s, id) {
@@ -544,23 +543,7 @@
 			fjs.parentNode.insertBefore(js, fjs);
 		}(document, 'script', 'facebook-jssdk'));
 	</script>
-	<!-- Google Analytics -->
-	<script>
-		(function (i, s, o, g, r, a, m) {
-			i['GoogleAnalyticsObject'] = r;
-			i[r] = i[r] || function () {
-				(i[r].q = i[r].q || []).push(arguments)
-			}, i[r].l = 1 * new Date();
-			a = s.createElement(o),
-				m = s.getElementsByTagName(o)[0];
-			a.async = 1;
-			a.src = g;
-			m.parentNode.insertBefore(a, m)
-		})(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-		ga('create', 'UA-92181507-1', 'auto');
-		ga('send', 'pageview');
-	</script>
 	<script>
 		$(document).ready(function () {
 			function modalAnim(x) {
@@ -600,6 +583,22 @@
 		})
 	</script>
 
-</body>
+	<!-- Google Analytics -->
+	<script>
+		(function (i, s, o, g, r, a, m) {
+			i['GoogleAnalyticsObject'] = r;
+			i[r] = i[r] || function () {
+				(i[r].q = i[r].q || []).push(arguments)
+			}, i[r].l = 1 * new Date();
+			a = s.createElement(o),
+				m = s.getElementsByTagName(o)[0];
+			a.async = 1;
+			a.src = g;
+			m.parentNode.insertBefore(a, m)
+		})(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
+		ga('create', 'UA-92181507-1', 'auto');
+		ga('send', 'pageview');
+	</script>
+</body>
 </html>
