--- a/shop.html
+++ b/shop.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 	<head>
-
 		<!-- Basic -->
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">	
@@ -26,9 +25,6 @@
 		<link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
 		<link rel="stylesheet" href="vendor/fontawesome-free/css/all.min.css">
 		<link rel="stylesheet" href="vendor/animate/animate.compat.css">
-		<!-- <link rel="stylesheet" href="vendor/simple-line-icons/css/simple-line-icons.min.css"> -->
-		<!-- <link rel="stylesheet" href="vendor/owl.carousel/assets/owl.carousel.min.css"> -->
-		<!-- <link rel="stylesheet" href="vendor/owl.carousel/assets/owl.theme.default.min.css"> -->
 		<link rel="stylesheet" href="vendor/magnific-popup/magnific-popup.min.css">
 
 		<!-- Theme CSS -->		
@@ -38,8 +34,6 @@
 		<link rel="stylesheet" href="css/theme-blog.css">
 		<link rel="stylesheet" href="css/theme-shop.css">
 
-
-
 		<!-- Skin CSS -->
 		<link id="skinCSS" rel="stylesheet" href="css/skins/default.css">
 
@@ -48,7 +42,32 @@
 
 		<!-- Head Libs -->
 		<script src="vendor/modernizr/modernizr.min.js"></script>
+		<!-- Global site tag (gtag.js) - Google Ads: 936755895 -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=AW-936755895"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
 
+			function gtag() {
+				dataLayer.push(arguments);
+			}
+			gtag('js', new Date());
+			gtag('config', 'AW-936755895');
+		</script>
+		<!-- Event snippet for 二代智慧無線麥克風擴音系列 conversion page In your html page, add the snippet and call gtag_report_conversion when someone clicks on the chosen link or button. -->
+		<script>
+			function gtag_report_conversion(url) {
+				var callback = function () {
+					if (typeof (url) != 'undefined') {
+						window.location = url;
+					}
+				};
+				gtag('event', 'conversion', {
+					'send_to': 'AW-936755895/Y9VjCIzg99IBELeF174D',
+					'event_callback': callback
+				});
+				return false;
+			}
+		</script>
 	</head>
 	<body>
 		<div id="fb-root"></div>
@@ -103,8 +122,16 @@
 																		<div class="col-lg-3">
 																			<span class="dropdown-mega-sub-title">二代無線擴音(接收端)</span>
 																			<ul class="dropdown-mega-sub-nav">
-																				<li><a class="dropdown-item" href="YS200.html">YS-200 智慧音頻主機</a></li>
-																				<li><a class="dropdown-item" href="YS250.html">YS-250 數位無線擴音音箱</a></li>
+																				<li>
+																					<a class="dropdown-item" href="YS200.html"
+																						onclick="return gtag_report_conversion('http://www.youngtone.com.tw/YS200.html');">YS-200
+																						智慧音頻主機</a>
+																				</li>
+																				<li>
+																					<a class="dropdown-item" href="YS250.html"
+																						onclick="return gtag_report_conversion('http://www.youngtone.com.tw/YS250.html');">YS-250
+																						數位無線擴音音箱</a>
+																				</li>
 																			</ul>
 																		</div>
 																		<div class="col-lg-3">
@@ -322,15 +349,9 @@
 		<script src="vendor/jquery.cookie/jquery.cookie.min.js"></script>
 		<script src="vendor/popper/umd/popper.min.js"></script>
 		<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-		<!-- <script src="vendor/jquery.validation/jquery.validate.min.js"></script> -->
-		<!-- <script src="vendor/jquery.easy-pie-chart/jquery.easypiechart.min.js"></script> -->
-		<!-- <script src="vendor/jquery.gmap/jquery.gmap.min.js"></script> -->
 		<script src="vendor/lazysizes/lazysizes.min.js"></script>
 		<script src="vendor/isotope/jquery.isotope.min.js"></script>
-		<!-- <script src="vendor/owl.carousel/owl.carousel.min.js"></script> -->
 		<script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
-		<!-- <script src="vendor/vide/jquery.vide.min.js"></script> -->
-		<!-- <script src="vendor/vivus/vivus.min.js"></script> -->
 
 		<!-- Theme Base, Components and Settings -->
 		<script src="js/theme.js"></script>
@@ -340,34 +361,6 @@
 
 		<!-- Theme Initialization Files -->
 		<script src="js/theme.init.js"></script>
-
-		<!-- Global site tag (gtag.js) - Google Ads: 936755895 -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=AW-936755895"></script>
-		<script>
-			window.dataLayer = window.dataLayer || [];
-
-			function gtag() {
-				dataLayer.push(arguments);
-			}
-			gtag('js', new Date());
-			gtag('config', 'AW-936755895');
-		</script>
-
-		<!-- Event snippet for 二代智慧無線麥克風擴音系列 conversion page In your html page, add the snippet and call gtag_report_conversion when someone clicks on the chosen link or button. -->
-		<script>
-			function gtag_report_conversion(url) {
-				var callback = function () {
-					if (typeof (url) != 'undefined') {
-						window.location = url;
-					}
-				};
-				gtag('event', 'conversion', {
-					'send_to': 'AW-936755895/Y9VjCIzg99IBELeF174D',
-					'event_callback': callback
-				});
-				return false;
-			}
-		</script>
 		
 		<script>
 			(function (d, s, id) {
@@ -379,6 +372,7 @@
 				fjs.parentNode.insertBefore(js, fjs);
 			}(document, 'script', 'facebook-jssdk'));
 		</script>
+
 		<!-- Google Analytics -->
 		<script>
 			(function (i, s, o, g, r, a, m) {
