fix: 新增二代智慧無線麥克風擴音系列追蹤碼

--- a/index.html
+++ b/index.html
@@ -536,7 +536,8 @@
 									<p style="margin:10px 0 13px 0;font-size: 15px;font-weight: 500">
 										<span style="color:#999999;">最新產品介紹與規格，請點擊</span>
 										<br>
-										<a href="YS250.html"><span>產品介紹</span></a> 或
+										<a href="YS250.html"
+											onclick="return gtag_report_conversion('http://www.youngtone.com.tw/YS250.html');"><span>產品介紹</span></a> 或
 										<a href=" https://www.youtube.com/channel/UCmDc3tKSyBSYxPnci35Jy-Q" target="_blank">
 											<span>Youtube 頻道</span>
 										</a>
