--- a/YS250.html
+++ b/YS250.html
@@ -68,6 +68,21 @@
       return false;
     }
   </script>
+  <!-- Event snippet for FB 點閱 conversion page In your html page, add the snippet and call gtag_report_conversion when someone clicks on the chosen link or button. -->
+  <script>
+    function gtag_fb_report_conversion(url) {
+      var callback = function () {
+        if (typeof (url) != 'undefined') {
+          window.location = url;
+        }
+      };
+      gtag('event', 'conversion', {
+        'send_to': 'AW-936755895/y3G3CKrDoOoBELeF174D',
+        'event_callback': callback
+      });
+      return false;
+    }
+  </script>
 </head>
 
 <body>
@@ -475,6 +490,8 @@
           <blockquote class="with-borders blockquote__bg">
             <p class="mb-3">
               <a href="https://www.facebook.com/%E9%A4%8A%E8%81%B2%E5%A0%82%E7%A7%91%E6%8A%80-779961655447214/"
+                onclick="return
+                gtag_fb_report_conversion('https://www.facebook.com/%E9%A4%8A%E8%81%B2%E5%A0%82%E7%A7%91%E6%8A%80-779961655447214/');"
                 target="_blank">
                 <img src="img/keyword_fb.jpg" alt="" class="img-responsive">
               </a>
