fix: add BSMI logo and info

--- a/service.html
+++ b/service.html
@@ -327,6 +327,8 @@
 												<blockquote class="blockquote-secondary">
 													<p class="line-height-7 text-4 mb-0">注意：</p>
 													<ol class="list list-ordened">
+														<li class="text-4">自行購買的充電器，須留意有經濟部商檢局 BSMI 標章 <img src="img/bsmi-logo.png" width="20"
+																style="vertical-align: baseline" /> 方可使用。</li>
 														<li class="text-4">部分帶有手機快充的 Type-C 充電器，輸出不是USB 5V，不可以用在麥克風/音箱充電。</li>
 														<li class="text-4">禁止使用電腦 筆電 教學輔助機的 USB充電， 那些 USB 是供資料傳輸, 長期做為充電使用有可能破壞內部零件。</li>
 														<li class="text-4">市面有些延長線或設備延伸的 USB孔, 也不要使用，其供電品質良莠不齊，作為小設備如 USB LED 燈尚可，當 3C設備充電很可能造成電路損壞。</li>
