feat: 新增促銷活動

--- a/YS150.html
+++ b/YS150.html
@@ -225,6 +225,13 @@
 						<p class="text-center font-weight-extra-bold line-height-7 text-4-5 mb-0">40g 輕盈的人體工學機身</p>
 					</div>
 
+					<p class="line-height-7 mb-3 mt-3 text-right">
+						<a class="btn btn-outline btn-success text-4 mb-2" href="promote_202108.html">
+							YS-250 防疫優惠專案
+							<i class="fas fa-arrow-right ml-1"></i>
+						</a>
+					</p>
+
 					<div class="row mb-4 pb-0 pt-2" style="align-items: flex-start;">
 						<div class="col-lg-6 mb-0 mb-lg-0">
 							<div class="image-hotspots">
