--- a/index.html
+++ b/index.html
@@ -551,22 +551,32 @@
 									</div>
 									<h3 style="color:#86ae3c;margin:15px 0 13px 0;font-size: 20px;font-weight: 500;">
 										台灣開發設計製造 YS-250 首發上市<br>
-										(兼容現有二代麥克風)
+										<a href="http://youngtone.com.tw/service.html?service=microphoneUpgrade"
+										 style="color:#86ae3c;font-size: 18px;font-weight: 500;text-decoration: underline;">兼容二代手持/頸掛麥克風</a>
 									</h3>
 									<p style="margin:10px 0 13px 0;font-size: 15px;font-weight: 500">
-										<span style="color:#999999;">最新產品介紹與規格，請點擊</span>
+										<span style="color:#999999;">了解新產品及優惠活動，請點擊 :</span>
 										<br>
-										<a href="YS250.html"
-											onclick="return gtag_report_conversion('http://www.youngtone.com.tw/YS250.html');"><span>產品介紹</span></a> 或
-										<a href=" https://www.youtube.com/channel/UCmDc3tKSyBSYxPnci35Jy-Q" target="_blank">
+										<a class="modal__button" href="YS250.html"
+											onclick="return gtag_report_conversion('http://www.youngtone.com.tw/YS250.html');">
+											<span>YS-250 產品介紹</span>
+										</a> |
+										<a class="modal__button" href=" https://www.youtube.com/channel/UCmDc3tKSyBSYxPnci35Jy-Q" target="_blank">
 											<span>Youtube 頻道</span>
+										</a> |
+										<a class="modal__button"
+											href="https://www.facebook.com/%E9%A4%8A%E8%81%B2%E5%A0%82%E7%A7%91%E6%8A%80-779961655447214/"
+											target="_blank">
+											<span>FB粉絲團</span>
+										</a> |
+										<a class="modal__button modal__button--promote" href="promote_202108.html">
+											<span>優惠專案</span>
 										</a>
 									</p>
-									<p style="margin:5px 0 13px 0;font-size: 15px;font-weight: 500">
+									<!-- <p style="margin:5px 0 13px 0;font-size: 15px;font-weight: 500">
 										臉書
-										<a href="https://www.facebook.com/%E9%A4%8A%E8%81%B2%E5%A0%82%E7%A7%91%E6%8A%80-779961655447214/"
-											target="_blank"><span>FB粉絲團</span></a>
-									</p>
+										
+									</p> -->
 									<!-- <div>
 										<h3 class="media-heading" style="font-size: 22px;font-weight: 600;margin-bottom: 0">
 											<i class="far fa-arrow-alt-right"></i> 春季優惠 實施中</h3>
