--- a/promote_202108.html
+++ b/promote_202108.html
@@ -202,7 +202,7 @@
 						</div>
 						<div class="row">
 							<div class="col p-static">
-								<h1 class="text-5-6 font-weight-extra-bold" data-title-border>哪裡購買</h1>
+								<h1 class="text-5-6 font-weight-extra-bold" data-title-border>YS-250 防疫優惠專案</h1>
 							</div>
 						</div>
 					</div>
@@ -211,48 +211,67 @@
 				<div class="container py-4">
 				  <div class="row">
 				    <div class="col mb-5">
-				      <p class="line-height-7 text-4 mb-2 mt-3">我們是新創公司，目前產品是用網路方式做行銷，奇摩、露天、蝦皮平台都有銷售，產品銷售也都有7天鑑賞期。</p>
-              <p class="line-height-7 text-4 mb-3">若有團購、學校採購或其他任何問題， 請致電或 Line, FB 跟我們公司連絡或確認。</p>
+              <h2 class="text-center font-weight-extra-bold line-height-7 text-7-8 mb-4" style="color: #0068b7;">防疫最佳利器<br>
+                讓你不用背音箱 輕鬆保護喉嚨<br>
+                養聲堂與大家一同抗疫</h2>
+				      <p class="line-height-7 text-4 mb-2 mt-3">
+				        新冠疫情持續影響我們的工作與日常生活，尤其對一些無可避免須面對學生或群眾的工作，如學校、補習班、安親班、醫院、戶外引導/導覽的工作，或共用麥克風、或頻繁與學生或群眾近距離接觸，而無法維持安全距離，等於長時間面對風險。使用傳統有線麥克風或小蜜蜂因音量問題和有線耳麥，限制很多。
+				      </p>
+              <p class="line-height-7 text-4 mb-3">一個高品質個人專用的麥克風對防疫是絕對有效的，養聲堂新款的YS-250 無線擴音箱
+                讓您有不同的麥克風選擇，無線擴音音箱也可放在人群中，有效的傳達聲音並擴音 保持安全距離。</p>
 
-              <div class="shop__group">
-              	<a href="https://shopee.tw/youngtone" target="_blank">
-              		<img src="img/sales/sale-shopee.png">
-              	</a>
-								<a href="http://class.ruten.com.tw/user/index00.php?s=youngtone" target="_blank">
-									<img src="img/sales/sale-ruten.png">
-								</a>
-								<a href="https://tw.bid.yahoo.com/booth/Y5571533139?bfe=1" target="_blank">
-									<img src="img/sales/sale-yahoo.png">
-								</a>
-              </div>
-              <p class="line-height-7 mb-3 mt-3 pl-1">
-              	<a class="btn btn-outline btn-success text-4 mb-2" href="promote_202108.html">
-									YS-250 防疫優惠專案
-									<i class="fas fa-arrow-right ml-1"></i>
-								</a>
+              <h2 class="text-center font-weight-extra-bold line-height-7 text-8 mb-4 mt-5" style="color: #eb6100;">
+								<span style="background-color: #28a745;border-radius: 5px; color: #ffffff; padding:10px 25px">YS-250 防疫優惠專案</span>
+							</h2>
+              <p class="text-center line-height-7 font-weight-extra-bold text-5 mb-2 mt-3" style="color: #80c269;">
+                即日起 ~ 2021.9.30 止, 凡購買 YS-250 無線擴音音箱 搭配任一款無線麥克風<br>
+                即贈送 <span class="text-5" style="color:#28a745">3C 收納包</span> 一只 價值 <span class="text-6"
+                	style="color:#28a745">NT$
+                	250</span><br>
+                讓您輕鬆收納 方便攜帶
               </p>
-              <h2 class="font-weight-extra-bold text-5 mb-2">
-              	展售實體店家
-              </h2>
-							<p class="line-height-7 text-4 mb-3">下列為銷售養聲堂無線擴音產品之實體店家，展售以無線麥克風(YS-100,
-								YS-150)，無線擴音音箱(YS-250)為主，欲前往店面購買時請先撥電話詢問有無現貨，以免向隅。</p>
-							<p class="line-height-7 text-4 mb-3">若您所在的縣市尚無銷售店家，有無線音頻主機(YS-200) 套件之需求, 或有產品技術或維修事宜, 請來電(02)2395-5780養聲堂科技，或從Line , Facebook頁面向我們聯繫購買事宜。謝謝您！</p>
-							<hr>
-							<p class="line-height-7 text-4 mb-3 font-weight-extra-bold text-primary">台北市</p>
-							<p class="line-height-7 text-4 mb-3">
-							<span class="font-weight-extra-bold text-tertiary">欣晟電器</span><br>
-							<span class="font-weight-extra-bold text-tertiary">台北市中正區延平南路13號之1</span>(博愛路及開封街口)<br>
-							營業時間 : 週一至週五10:00~18:00，周六12:00~18:00<br>
-							電話： 02-23610008</p>
-
-							<p class="line-height-7 text-4 mb-3 font-weight-extra-bold text-primary">桃園市</p>
-							<p class="line-height-7 text-4 mb-3">
-							<span class="font-weight-extra-bold text-tertiary">小天使水果店</span><br>
-							<span class="font-weight-extra-bold text-tertiary">330桃園市桃園區南華街133號</span><br>
-							營業時間 : 07:00~17:00 (每周一休息)<br>
-							電話：0932200672 劉先生 (養聲堂聲學顧問)</p>				      
 				    </div>
 				  </div>
+
+				  <div class="row">
+				  	<div class="col-lg-12">
+				  		<p class="text-right">
+				  			<button type="button" onClick="history.go(-1)" class="mb-1 mt-1 mr-1 btn btn-light"><i class="fas fa-sync"></i> 回上一頁</button>
+				  			<button type="button" class="mb-1 mt-1 mr-1 btn btn-primary"
+									onclick="return gtag_report_conversion('http://www.youngtone.com.tw/YS250.html');"
+								>YS-250 無線擴音音箱功能
+				  				<i class="fas fa-arrow-right ml-1"></i>
+				  			</button>
+				  		</p>
+				  	</div>
+				  </div>
+
+					<div class="row">
+						<div class="col-lg-4">
+							<span class="img-thumbnail d-block">
+								<span class="thumb-info-wrapper">
+									<img src="img/promote/product_01.jpg" class="img-fluid" alt="">
+								</span>
+							</span>
+							<p class="text-center">獨立收納省空間</p>
+						</div>
+						<div class="col-lg-4">
+							<span class="img-thumbnail d-block">
+								<span class="thumb-info-wrapper">
+									<img src="img/promote/product_02.jpg" class="img-fluid" alt="">
+								</span>
+							</span>
+							<p class="text-center">分層擺放好方便</p>
+						</div>
+						<div class="col-lg-4">
+							<span class="img-thumbnail d-block">
+								<span class="thumb-info-wrapper">
+									<img src="img/promote/product_03.jpg" class="img-fluid" alt="">
+								</span>
+							</span>
+							<p class="text-center">側邊提把好攜帶</p>
+						</div>
+					</div>
 				</div>
 			</div>
       
