--- a/YS250.html
+++ b/YS250.html
@@ -215,6 +215,13 @@
             <p class="text-center font-weight-extra-bold line-height-7 text-4 mb-0">重量輕 音質清晰 自動對頻 可邊充邊用</p>
           </div>
 
+          <p class="line-height-7 mb-3 mt-3 text-right">
+            <a class="btn btn-outline btn-success text-4 mb-2" href="promote_202108.html">
+              YS-250 防疫優惠專案
+              <i class="fas fa-arrow-right ml-1"></i>
+            </a>
+          </p>
+
           <div class="row mb-0 pb-0 pt-0">
             <div class="col-lg-6 mb-0 mb-lg-0">
               <div class="image-hotspots">
