feat: 新增揪團團購優惠

--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
 										<br>
 										<a class="modal__button" href="YS250.html"
 											onclick="return gtag_report_conversion('http://www.youngtone.com.tw/YS250.html');">
-											<span>YS-250 產品介紹</span>
+											<span>產品介紹</span>
 										</a> |
 										<a class="modal__button" href=" https://www.youtube.com/channel/UCmDc3tKSyBSYxPnci35Jy-Q" target="_blank">
 											<span>Youtube 頻道</span>
@@ -568,9 +568,13 @@
 											href="https://www.facebook.com/%E9%A4%8A%E8%81%B2%E5%A0%82%E7%A7%91%E6%8A%80-779961655447214/"
 											target="_blank">
 											<span>FB粉絲團</span>
-										</a> |
+										</a><br>
 										<a class="modal__button modal__button--promote" href="promote_202108.html">
-											<span>優惠專案</span>
+											<span>優惠專案(擴音音箱</span>
+										</a>
+										</a> |
+										<a class="modal__button modal__button--promote" href="promote_202109.html">
+											<span>揪團團購優惠(麥克風)</span>
 										</a>
 									</p>
 									<!-- <p style="margin:5px 0 13px 0;font-size: 15px;font-weight: 500">
@@ -671,6 +675,19 @@
 
 			ga('create', 'UA-92181507-1', 'auto');
 			ga('send', 'pageview');
+		</script>
+		\
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-KHWW0D6V6R"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+
+			function gtag() {
+				dataLayer.push(arguments);
+			}
+			gtag('js', new Date());
+
+			gtag('config', 'G-KHWW0D6V6R');
 		</script>
 	</body>
 </html>
