--- a/viedo.html
+++ b/viedo.html
@@ -633,5 +633,17 @@
     ga('create', 'UA-92181507-1', 'auto');
     ga('send', 'pageview');
   </script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-KHWW0D6V6R"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-KHWW0D6V6R');
+  </script>
 </body>
 </html>
