feat: 新增帝谷通信

--- a/shop.html
+++ b/shop.html
@@ -224,10 +224,18 @@
 								<a href="https://tw.bid.yahoo.com/booth/Y5571533139?bfe=1" target="_blank">
 									<img src="img/sales/sale-yahoo.png">
 								</a>
+								</a>
+								<a href="https://www.tayoco.com.tw/p2_product.php?Class1=1817-1_vHTA2jpXGVeo8soAhsl1VqsgUBFA7xIluFw" target="_blank">
+									<img src="img/sales/sale-tayo.png">
+								</a>
               </div>
               <p class="line-height-7 mb-3 mt-3 pl-1">
               	<a class="btn btn-outline btn-success text-4 mb-2" href="promote_202108.html">
 									YS-250 防疫優惠專案
+									<i class="fas fa-arrow-right ml-1"></i>
+								</a>
+								<a class="btn btn-outline btn-success text-4 mb-2" href="promote_202109.html">
+									揪團團購優惠專案
 									<i class="fas fa-arrow-right ml-1"></i>
 								</a>
               </p>
@@ -251,6 +259,12 @@
 							<span class="font-weight-extra-bold text-tertiary">330桃園市桃園區南華街133號</span><br>
 							營業時間 : 07:00~17:00 (每周一休息)<br>
 							電話：0932200672 劉先生 (養聲堂聲學顧問)</p>				      
+
+							<p class="line-height-7 text-4 mb-3 font-weight-extra-bold text-primary">嘉義市</p>
+							<p class="line-height-7 text-4 mb-3">
+							<span class="font-weight-extra-bold text-tertiary">帝谷通信工程有限公司</span><br>
+							<span class="font-weight-extra-bold text-tertiary">60077嘉義市東洋新村9號</span><br>
+							電話：05-2784023分機157 江小姐</p>				      
 				    </div>
 				  </div>
 				</div>
@@ -415,6 +429,18 @@
 
 			ga('create', 'UA-92181507-1', 'auto');
 			ga('send', 'pageview');
+		</script>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-KHWW0D6V6R"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+
+			function gtag() {
+				dataLayer.push(arguments);
+			}
+			gtag('js', new Date());
+
+			gtag('config', 'G-KHWW0D6V6R');
 		</script>
 	</body>
 </html>
