--- a/YS100.html
+++ b/YS100.html
@@ -229,6 +229,10 @@
               YS-250 防疫優惠專案
               <i class="fas fa-arrow-right ml-1"></i>
             </a>
+            <a class="btn btn-outline btn-success text-4 mb-2" href="promote_202109.html">
+              揪團團購優惠專案
+              <i class="fas fa-arrow-right ml-1"></i>
+            </a>
           </p>
 
           <div class="row mb-4 pb-0 pt-5" style="align-items: flex-start;">
@@ -382,7 +386,7 @@
                 <li class="text-quaternary">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold text-4 mb-0">重量 / 外觀 :</h4>
-                  <span class="text-4">75g，高度 17cm；麥克風剛好一手掌握，男女適用</span>
+                  <span class="text-4">75g，高度 12cm；麥克風剛好一手掌握，男女適用</span>
                 </li>
                 <li class="text-quaternary">
                   <i class="fas fa-check"></i>
@@ -662,6 +666,18 @@
 
     ga('create', 'UA-92181507-1', 'auto');
     ga('send', 'pageview');
+  </script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-KHWW0D6V6R"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-KHWW0D6V6R');
   </script>
 </body>
 </html>
