--- a/YS150.html
+++ b/YS150.html
@@ -230,6 +230,10 @@
 							YS-250 防疫優惠專案
 							<i class="fas fa-arrow-right ml-1"></i>
 						</a>
+						<a class="btn btn-outline btn-success text-4 mb-2" href="promote_202109.html">
+							揪團團購優惠專案
+							<i class="fas fa-arrow-right ml-1"></i>
+						</a>
 					</p>
 
 					<div class="row mb-4 pb-0 pt-2" style="align-items: flex-start;">
@@ -625,6 +629,18 @@
 
 		ga('create', 'UA-92181507-1', 'auto');
 		ga('send', 'pageview');
+	</script>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-KHWW0D6V6R"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+
+		function gtag() {
+			dataLayer.push(arguments);
+		}
+		gtag('js', new Date());
+
+		gtag('config', 'G-KHWW0D6V6R');
 	</script>
 </body>
 </html>
