--- a/YS200.html
+++ b/YS200.html
@@ -233,6 +233,12 @@
             </div>
           </div>
 
+          <p class="line-height-7 mb-3 mt-3 text-right">
+            <a class="btn btn-outline btn-success text-4 mb-2" href="promote_202109.html">
+              揪團團購優惠專案
+              <i class="fas fa-arrow-right ml-1"></i>
+            </a>
+          </p>
           <div class="row mb-0 pb-0 pt-0">
             <div class="col-lg-6 mb-0 mb-lg-0">
               <div class="image-hotspots">
@@ -599,6 +605,18 @@
 
     ga('create', 'UA-92181507-1', 'auto');
     ga('send', 'pageview');
+  </script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-KHWW0D6V6R"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-KHWW0D6V6R');
   </script>
 </body>
 </html>
