--- a/YS250.html
+++ b/YS250.html
@@ -271,7 +271,7 @@
                 <h4 class="text-4 pt-2 pb-0 mb-1"><strong>* YS-250 專業版</strong></h4>
                 <p class="text-3-4 mt-0">
                   提供有線麥克風 無線擴音雙通道 皆可單獨或混音使用<br>
-                  預計 2021 下半年上市推出
+                  預計 2022 年上市推出
                 </p>
               </div>
             </div>
@@ -334,6 +334,48 @@
                   </li>
                 </ul>
               </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row mb-4 pb-4 pt-0">
+        <div class="container animated fadeIn appear-animation-visible">
+          <h4 class="text-4 pt-2"><strong>產品規格 ：</strong></h4>
+          <div class="row">
+            <div class="col-lg-6 mb-0 mb-lg-0">
+              <ul class="list list-icons list-dark mt-2">
+                <li class="mb-1"><i class="fas fa-sparkles top-4"></i> <span class="text-success">無線發射使用頻率：</span>
+                  2402~2408MHz</li>
+                <li class="mb-1"><i class="fas fa-sparkles top-4"></i> <span class="text-success">跳頻展頻(FHSS)技術：</span>
+                  避免無線干擾，提升通話品質
+                </li>
+                <li class="mb-1"><i class="fas fa-sparkles top-4"></i> <span class="text-success">天線：</span> 隱蔽式</li>
+                <li class="mb-1"><i class="fas fa-sparkles top-4"></i> <span class="text-success">有效距離：</span> 約25 公尺
+                  (直線 無遮蔽)</li>
+                <li class="mb-1"><i class="fas fa-sparkles top-4"></i> <span class="text-success">產品尺寸：</span> 11.8 x
+                  8.2 x 5.8 (單位：cm)</li>
+                <li class="mb-1"><i class="fas fa-sparkles top-4"></i> <span class="text-success">重量：</span> 299 公克
+                  （規格以實際產品為主)</li>
+              </ul>
+            </div>
+            <div class="col-lg-6 mb-0 mb-lg-0">
+              <ul class="list list-icons list-dark mt-2">
+                <li class="mb-1"><i class="fas fa-sparkles top-4"></i> <span class="text-success">喇叭輸出功率：</span>
+                  10W (Max.)</li>
+                <li class="mb-1"><i class="fas fa-sparkles top-4"></i> <span class="text-success">喇叭阻抗：</span> 4 Ω</li>
+                <li class="mb-1"><i class="fas fa-sparkles top-4"></i> <span class="text-success">喇叭頻率響應：</span> 20~20k
+                  Hz</li>
+                <li class="mb-1"><i class="fas fa-sparkles top-4"></i> <span class="text-success">最大擴音範圍：</span>
+                  約 8~10 公尺
+                </li>
+                <li class="mb-1"><i class="fas fa-sparkles top-4"></i> <span class="text-success">充電時間：</span>
+                  4 小時
+                </li>
+                <li class="mb-1"><i class="fas fa-sparkles top-4"></i> <span class="text-success">使用時數：</span>
+                  授課約 15 小時 /音樂約 5小時 (與擴音音量大小有關)
+                </li>
+              </ul>
             </div>
           </div>
         </div>
@@ -434,18 +476,6 @@
                   <h4 class="font-weight-semibold text-4 mb-0">全球獨家 :</h4>
                   <span class="text-4">台灣設計、開發、生產，<span class="text-success font-weight-semibold text-4">台灣首發
                       全球獨家</span>。</span>
-                </li>
-                <li class="text-quaternary"
-                  data-appear-animation-delay="2400">
-                  <i class="fas fa-check"></i>
-                  <h4 class="font-weight-semibold text-4 mb-0">產品規格:</h4>
-                  <span class="text-4">
-                    1. 尺寸 11.8 x 8.2 x 5.8 cm<br>
-                    2. 重量 299g （規格以實際產品為主)<br>
-                    3. 喇叭功率 10W<br>
-                    4. 擴音範圍 7~8米<br>
-                    5. 無線連接距離 20公尺(直線)<br>
-                  </span>
                 </li>
               </ul>
             </div>
@@ -654,6 +684,18 @@
 
     ga('create', 'UA-92181507-1', 'auto');
     ga('send', 'pageview');
+  </script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-KHWW0D6V6R"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-KHWW0D6V6R');
   </script>
 </body>
 </html>
