--- a/promote_202109.html
+++ b/promote_202109.html
@@ -43,7 +43,7 @@
 		<!-- Head Libs -->
 		<script src="vendor/modernizr/modernizr.min.js"></script>
 		<!-- Global site tag (gtag.js) - Google Ads: 936755895 -->
-		<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=AW-936755895"></script>
+		<script async src="https://www.googletagmanager.com/gtag/js?id=AW-936755895"></script>
 		<script>
 			window.dataLayer = window.dataLayer || [];
 
@@ -52,9 +52,9 @@
 			}
 			gtag('js', new Date());
 			gtag('config', 'AW-936755895');
-		</script> -->
+		</script>
 		<!-- Event snippet for 二代智慧無線麥克風擴音系列 conversion page In your html page, add the snippet and call gtag_report_conversion when someone clicks on the chosen link or button. -->
-		<!-- <script>
+		<script>
 			function gtag_report_conversion(url) {
 				var callback = function () {
 					if (typeof (url) != 'undefined') {
@@ -67,9 +67,9 @@
 				});
 				return false;
 			}
-		</script> -->
+		</script>
 		<!-- Event snippet for FB 點閱 conversion page In your html page, add the snippet and call gtag_report_conversion when someone clicks on the chosen link or button. -->
-		<!-- <script>
+		<script>
 			function gtag_fb_report_conversion(url) {
 				var callback = function () {
 					if (typeof (url) != 'undefined') {
@@ -82,7 +82,7 @@
 				});
 				return false;
 			}
-		</script> -->
+		</script>
 	</head>
 	<body>
 		<div id="fb-root"></div>
@@ -276,11 +276,6 @@
 				  	<div class="col-lg-12">
 				  		<p class="text-right">
 				  			<button type="button" onClick="history.go(-1)" class="mb-1 mt-1 mr-1 btn btn-light"><i class="fas fa-sync"></i> 回上一頁</button>
-				  			<!-- <button type="button" class="mb-1 mt-1 mr-1 btn btn-primary"
-									onclick="return gtag_report_conversion('http://www.youngtone.com.tw/YS250.html');"
-								>YS-250 無線擴音音箱功能
-				  				<i class="fas fa-arrow-right ml-1"></i>
-				  			</button> -->
 				  		</p>
 				  	</div>
 				  </div>
@@ -419,7 +414,7 @@
 		<!-- Theme Initialization Files -->
 		<script src="js/theme.init.js"></script>
 		
-		<!-- <script>
+		<script>
 			(function (d, s, id) {
 				var js, fjs = d.getElementsByTagName(s)[0];
 				if (d.getElementById(id)) return;
@@ -428,10 +423,10 @@
 				js.src = "//connect.facebook.net/zh_TW/sdk.js#xfbml=1&version=v2.8";
 				fjs.parentNode.insertBefore(js, fjs);
 			}(document, 'script', 'facebook-jssdk'));
-		</script> -->
+		</script>
 
 		<!-- Google Analytics -->
-		<!-- <script>
+		<script>
 			(function (i, s, o, g, r, a, m) {
 				i['GoogleAnalyticsObject'] = r;
 				i[r] = i[r] || function () {
@@ -446,6 +441,6 @@
 
 			ga('create', 'UA-92181507-1', 'auto');
 			ga('send', 'pageview');
-		</script> -->
+		</script>
 	</body>
 </html>
