fix: 更換Promote 連結

--- a/index.html
+++ b/index.html
@@ -569,13 +569,9 @@
 											target="_blank">
 											<span>FB粉絲團</span>
 										</a><br>
-										<a class="modal__button modal__button--promote" href="promote_202108.html">
-											<span>優惠專案(擴音音箱</span>
-										</a>
-										</a> |
-										<a class="modal__button modal__button--promote" href="promote_202109.html">
-											<span>揪團團購優惠(麥克風)</span>
-										</a>
+                    <a class="modal__button modal__button--promote" href="promote_202206.html">
+                      <span>擴音音箱組合包</span>
+                    </a>
 									</p>
 									<!-- <p style="margin:5px 0 13px 0;font-size: 15px;font-weight: 500">
 										臉書
