fix: 產品文案更新

--- a/YS150.html
+++ b/YS150.html
@@ -266,7 +266,7 @@
 								</li>
 								<li class="ys-2">
 									<h4 class="font-weight-semibold text-4 mb-0">麥克風軟管 :</h4>
-									<span class="text-3-4">直徑 0.11公分軟管，不阻礙視線。可 180 定位將麥克風定位至您最適合的位置</span>
+									<span class="text-3-4">直徑 0.11公分軟管，不阻礙視線。可將麥克風定位至最適合的位置</span>
 								</li>
 								<li class="ys-3">
 									<h4 class="font-weight-semibold text-4 mb-0">超輕量掛頸設計 :</h4>
