--- a/YS250.html
+++ b/YS250.html
@@ -443,7 +443,7 @@
                   data-appear-animation-delay="300">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold text-4 mb-0">創新技術 / 功能 :</h4>
-                  <span class="text-4">一麥雙享 : 一個麥克風 兩個音箱同步一起擴音<br>
+                  <span class="text-4">一麥雙响 : 一個麥克風 兩個音箱同步一起擴音<br>
                     邊充邊用 : 電量低時 可邊USB充電邊使用擴音
                 </li>
                 <li class="text-quaternary"
