feat: 新增where we do

--- a/about.html
+++ b/about.html
@@ -376,6 +376,76 @@
 
 							</div>
 							<div class="col-lg-6 pr-lg-5 mb-4 mb-lg-0 appear-animation" data-appear-animation="fadeInLeftShorter" data-appear-animation-delay="200">
+								<h6 class="text-color-primary font-weight-medium positive-ls-3 mb-2">WHERE WO DO</h6>
+								<h4 class="font-weight-bold text-transform-none text-5-6 line-height-2 mb-2">生活場景的應用</h4>
+
+								<ul class="list list-icons list-icons-lg">
+									<li>
+										<i class="fas fa-angle-right text-4"></i>
+                    <span class="text-4">
+                      <strong class="font-weight-semibold">教室教學、安親班上課 : </strong><br>
+                      小教室、小空間可以不用再買昂貴的擴音器材。
+                    </span>
+                  </li>
+								  <li>	
+										<i class="fas fa-angle-right text-4"></i>
+                    <span class="text-4">
+                      <strong class="font-weight-semibold">室內、外群眾演說 : </strong><br>
+                      動態、小眾演講活動，一套無線擴音組已經足夠。
+                    </span>
+                  </li>
+								  <li>
+                    <i class="fas fa-angle-right text-4"></i>
+                    <span class="text-4">
+                      <strong class="font-weight-semibold">博物館、戶外生態導覽 : </strong><br>
+                      柔和如本人原聲的擴音效果，讓聽眾更專注。
+                    </span>
+                  </li>
+								  <li>
+										<i class="fas fa-angle-right text-4"></i>
+                    <span class="text-4">
+                      <strong class="font-weight-semibold">商場購物中心/傳統市場促銷 : </strong><br>
+                      使用穿戴麥克風，可隨意走動，雙手介紹，商機無限。
+                    </span>
+                  </li>
+							    <li>
+										<i class="fas fa-angle-right text-4"></i>
+                    <span class="text-4">
+                      <strong class="font-weight-semibold">餐廳前後場點餐通知廣播 : </strong><br>
+                      點餐與廚房間溝通，不用再施工拉線。
+                    </span>
+                  </li>
+								  <li>
+										<i class="fas fa-angle-right text-4"></i>
+                    <span class="text-4">
+                      <strong class="font-weight-semibold">醫師門診/衛生所，銀髮看護擴音輔助 : </strong><br>
+                      長時間看診、病患導覽、老人看護，免除大聲說話，影響聲帶。
+                  </span>
+                </li>
+							  <li>
+										<i class="fas fa-angle-right text-4"></i>
+                    <span class="text-4">
+                      <strong class="font-weight-semibold">社團活動、比賽 : </strong><br>
+                      無麥克風牽絆 不影響您精緻的表演。
+                    </span>
+                  </li>
+								  <li>
+										<i class="fas fa-angle-right text-4"></i>
+                    <span class="text-4">
+                      <strong class="font-weight-semibold">宗教活動、集會 : </strong><br>
+                      誦經、傳道，一人一套不干擾。
+                    </span>
+                  </li>
+								  <li>
+										<i class="fas fa-angle-right text-4"></i>
+                    <span class="text-4">
+                      <strong class="font-weight-semibold">選舉、政治活動 : </strong><br>
+                      不用再腰纏擴音音箱，交給助理站人群中擴音效果更佳。
+                    </span>
+                  </li>
+                </ul>
+							</div>
+							<div class="col-lg-12 pr-lg-5 mb-4 mb-lg-0 appear-animation" data-appear-animation="fadeInRightShorter" data-appear-animation-delay="200">
 								<h6 class="text-color-primary font-weight-medium positive-ls-3 mb-2">PROMISE</h6>
 								<h4 class="font-weight-bold text-transform-none text-5-6 line-height-2 mb-2">承諾</h4>
 								<p class="line-height-7 text-4 mb-2">現今電子產品皆已朝向數位化、無線化發展，其所借助的就是半導體技術。晶片設計公司將功能整合後，到如台積電等代工廠做成 IC(積體電路)。IC 應用在產品中，讓新產品體積更小、重量輕、特性更穩定、使用時數更長、也不會因使用時間久了零件老化造成品質降低。</p>
